--- a/social-proof-section-master/style.css
+++ b/social-proof-section-master/style.css
@@ -27,6 +27,7 @@ body {
         background-repeat: no-repeat;
         height: 100vh;
         width: 100vw;
+        
     }
 }
 
@@ -135,6 +136,11 @@ main section:nth-child(3) li {
 
  /* FOOTER */
 
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
 
 .attribution {
     font-size: 11px;
@@ -152,6 +158,10 @@ main section:nth-child(3) li {
         width: clamp(60%, 1150px, 80%);
         display: grid;
         grid-template-columns: 1fr 1fr;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
     main section:nth-child(3) ul {
@@ -181,9 +191,14 @@ main section:nth-child(3) li {
         flex-direction: column;
     }
 
-    .ratings li {
+    main section:nth-child(2) li {
         width: 400px;
+        flex-direction: row;
+        gap: 1.5rem;
+
     }
+
+  
 
     .ratings li:first-child {
         margin-right: auto;
